# Chef-s_Book

./: .bookings.csv  .customers.csv  .gitignore  README.md  pyproject.toml
src/: main.py
src/modules/: __init__.py  book.py  contact.py  error_handler.py  notes.py  storage.py  ui.py
src/modules/dto/: base_dto.py  booking_dto.py  customer_dto.py
src/modules/models/: booking_model.py  customer_model.py
src/modules/models/fields/: base_field.py  date_field.py  datetime_field.py  email_field.py  id_field.py  name_field.py  note_field.py  phone_field.py
src/modules/service/: bookings_service.py  customers_service.py
src/modules/ui/: command_analyzer.py  commands.py  customer_management_cli.py  main_loop.py
src/molules/: book.py  contact.py  error_handler.py  notes.py  storage.py  ui.py
src/molules/dto/: customer_dto.py
src/molules/models/: customer_model.py
src/molules/models/fields/: address_field.py
src/molules/service/: base_service.py
tests/: __init__.py  test_address.py  test_birthday.py  test_booking.py  test_customer.py  test_customers.py  test_email.py  test_id.py  test_name.py  test_notes.py  test_phone.py  test_storage.py
